--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
         display: flex;
         flex-direction: column;
       }
+      .left {
+        left: 0;
+      }
     </style>
   </head>
   <body style="background-color: #424242">
@@ -24,6 +27,10 @@
       <text style="align-self: center; color: white" id="stkprice"></text>
       <canvas height="480px" id="myChart"></canvas>
     </div>
+    <div class="chart left">
+      <text style="align-self: center; color: white" id="stkprice2"></text>
+      <canvas height="480px" id="myChart2"></canvas>
+    </div>
 
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 
@@ -31,6 +38,36 @@
       const ctx = document.getElementById("myChart");
       Chart.defaults.color = "white";
       let myChart = new Chart(ctx, {
+        type: "bar",
+        options: {
+          responsive: true,
+          maintainAspectRatio: false,
+        },
+        data: {
+          labels: ["call", "put"],
+
+          datasets: [
+            {
+              label: "OI",
+              data: [12, 19],
+              borderWidth: 1,
+              backgroundColor: [
+                "rgba(255, 99, 132, 0.2)",
+                "rgba(75, 192, 192, 0.2)",
+              ],
+              borderColor: ["rgba(255, 99, 132, 1)", "rgba(75, 192, 192, 1)"],
+            },
+          ],
+        },
+        options: {
+          scales: {
+            y: {
+              beginAtZero: true,
+            },
+          },
+        },
+      });
+      let myChart2 = new Chart(document.getElementById("myChart2"), {
         type: "bar",
         options: {
           responsive: true,
@@ -72,7 +109,18 @@
           let stkprice = Math.round(hehe.data.underlyingValue / 50) * 50;
           document.getElementById("stkprice").innerHTML =
             "Strike Price:" + stkprice;
+          document.getElementById("stkprice2").innerHTML =
+            "Strike Price:" + (stkprice - 50);
           for (x in hehe.data.data) {
+            if (hehe.data.data[x].strikePrice == stkprice - 50)
+              addData(
+                myChart2,
+                [
+                  hehe.data.data[x].ce.openInterest,
+                  hehe.data.data[x].pe.openInterest,
+                ],
+                0
+              );
             if (hehe.data.data[x].strikePrice == stkprice)
               addData(
                 myChart,
