--- a/index.html
+++ b/index.html
@@ -2,101 +2,89 @@
   <head>
     <style>
       .chart {
-        position: absolute;
         height: 500px;
         width: 300px;
-        right: 0;
         border-radius: 10px;
-        bottom: 0;
         background-color: #292929;
         display: flex;
         flex-direction: column;
       }
-      .left {
-        left: 0;
+      .abs {
+        position: absolute;
+        right: 0;
+        bottom: 0;
       }
     </style>
   </head>
   <body style="background-color: #424242">
-    <iframe
-      style="height: 100%; width: 100%"
-      src="https://niftychain.in/"
-      frameborder="0"
-    ></iframe>
-    <div class="chart">
-      <text style="align-self: center; color: white" id="stkprice"></text>
-      <canvas height="480px" id="myChart"></canvas>
-    </div>
-    <div class="chart left">
-      <text style="align-self: center; color: white" id="stkprice2"></text>
-      <canvas height="480px" id="myChart2"></canvas>
+    <div style="display: flex; flex-direction: row; height: 100%">
+      <iframe
+        style="flex: 2"
+        src="https://niftychain.in/"
+        frameborder="0"
+      ></iframe>
+      <div style="flex: 0.8; height: 100%" class="chart">
+        <canvas id="myChart"></canvas>
+      </div>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 
     <script>
       const ctx = document.getElementById("myChart");
+
+      const data = {
+        labels: [2, "4311", "4571", "4588"],
+        datasets: [
+          {
+            data: [5996, 4605, 1288, 3463, 5996, 4605, 1288, 3463],
+            backgroundColor: [
+              "rgba(245, 48, 32, 0.55)",
+              "rgba(37, 255, 32, 0.55)",
+              "rgba(245, 48, 32, 0.55)",
+              "rgba(37, 255, 32, 0.55)",
+              "rgba(245, 48, 32, 0.55)",
+              "rgba(37, 255, 32, 0.55)",
+              "rgba(245, 48, 32, 0.55)",
+              "rgba(37, 255, 32, 0.55)",
+            ],
+            borderColor: [
+              "rgba(245, 48, 32, 0.8)",
+              "rgba(37, 255, 32, 0.55)",
+              "rgba(245, 48, 32, 0.8)",
+              "rgba(37, 255, 32, 0.55)",
+              "rgba(245, 48, 32, 0.8)",
+              "rgba(37, 255, 32, 0.55)",
+              "rgba(245, 48, 32, 0.8)",
+              "rgba(37, 255, 32, 0.55)",
+            ],
+          },
+        ],
+      };
+
       Chart.defaults.color = "white";
       let myChart = new Chart(ctx, {
         type: "bar",
         options: {
           responsive: true,
           maintainAspectRatio: false,
-        },
-        data: {
-          labels: ["call", "put"],
-
-          datasets: [
-            {
-              label: "OI",
-              data: [12, 19],
-              borderWidth: 1,
-              backgroundColor: [
-                "rgba(255, 99, 132, 0.2)",
-                "rgba(75, 192, 192, 0.2)",
-              ],
-              borderColor: ["rgba(255, 99, 132, 1)", "rgba(75, 192, 192, 1)"],
-            },
-          ],
-        },
-        options: {
           scales: {
             y: {
               beginAtZero: true,
             },
           },
-        },
-      });
-      let myChart2 = new Chart(document.getElementById("myChart2"), {
-        type: "bar",
-        options: {
-          responsive: true,
-          maintainAspectRatio: false,
-        },
-        data: {
-          labels: ["call", "put"],
-
-          datasets: [
-            {
-              label: "OI",
-              data: [12, 19],
-              borderWidth: 1,
-              backgroundColor: [
-                "rgba(255, 99, 132, 0.2)",
-                "rgba(75, 192, 192, 0.2)",
-              ],
-              borderColor: ["rgba(255, 99, 132, 1)", "rgba(75, 192, 192, 1)"],
-            },
-          ],
-        },
-        options: {
-          scales: {
-            y: {
-              beginAtZero: true,
+          tooltips: {
+            callbacks: {
+              label: (tooltipItem, data) => {
+                let i = tooltipItem.index;
+                return data.productNames[i] + ": " + data.datasets[0].data[i];
+              },
             },
           },
         },
+        data: data,
       });
+
       function setOi() {
         fetch("https://api.niftychain.in/api/live-data", {
           method: "POST",
@@ -107,26 +95,22 @@
         }).then(async (data) => {
           let hehe = await data.json();
           let stkprice = Math.round(hehe.data.underlyingValue / 50) * 50;
-          document.getElementById("stkprice").innerHTML =
-            "Strike Price:" + stkprice;
-          document.getElementById("stkprice2").innerHTML =
-            "Strike Price:" + (stkprice - 50);
+
           for (x in hehe.data.data) {
-            if (hehe.data.data[x].strikePrice == stkprice - 50)
-              addData(
-                myChart2,
-                [
-                  hehe.data.data[x].ce.openInterest,
-                  hehe.data.data[x].pe.openInterest,
-                ],
-                0
-              );
             if (hehe.data.data[x].strikePrice == stkprice)
               addData(
                 myChart,
                 [
+                  hehe.data.data[x - 1].ce.openInterest,
+                  hehe.data.data[x - 1].pe.openInterest,
                   hehe.data.data[x].ce.openInterest,
                   hehe.data.data[x].pe.openInterest,
+                ],
+                [
+                  hehe.data.data[x - 1].strikePrice,
+                  hehe.data.data[x - 1].strikePrice,
+                  hehe.data.data[x].strikePrice,
+                  hehe.data.data[x].strikePrice,
                 ],
                 0
               );
@@ -136,8 +120,9 @@
       setOi();
       setInterval(() => setOi(), 10000);
 
-      function addData(chart, data, datasetIndex) {
+      function addData(chart, data, labels, datasetIndex) {
         chart.data.datasets[datasetIndex].data = data;
+        chart.data.labels = labels;
         chart.update();
       }
     </script>
