--- a/index.html
+++ b/index.html
@@ -190,8 +190,8 @@
               lastPCR == 0
                 ? "color:white;"
                 : PCR > lastPCR
-                ? "color:green;background-color: white;line-height: 2;"
-                : "color:red;background-color: white;line-height: 2;";
+                ? "color:green;background-color: white;line-height: 2; font-weight: 900;"
+                : "color:red;background-color: white;line-height: 2; font-weight: 900;";
           lastPCR = PCR;
         });
       }
