--- a/superoi.html
+++ b/superoi.html
@@ -55,15 +55,15 @@
           labels: xValues,
           datasets: [
             {
-              label: "Volume",
+              label: "Calls Volume",
               data: [860, 1140, 1060, 1060, 1070, 1110, 1330, 2210, 7830, 2478],
-              borderColor: coiColor,
+              borderColor: "red",
               fill: false,
             },
             {
-              label: "Volume",
+              label: "Puts Volume",
               data: [200, 1140, 1920, 1060, 1070, 1110, 1330, 2210, 7830, 2478],
-              borderColor: coiColor,
+              borderColor: "green",
               fill: false,
             },
           ],
