--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
       let lastVolCpr;
       let volColor = "white";
       function setOi() {
-        fetch("https://pro.niftychain.in/api/live-data?symbol=" + ticker, {
+        fetch("https://ninja.niftychain.in/api/live-data?symbol=" + ticker, {
           method: "GET",
           headers: {
             "Content-Type": "application/x-www-form-urlencoded;charset=UTF-8",
