--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       </audio>
       <iframe
         style="flex: 2"
-        src="https://niftychain.in/"
+        src="https://aoccalculator.in/"
         frameborder="0"
       ></iframe>
       <div style="flex: 0.8; height: 90%" class="chart">
