--- a/index.html
+++ b/index.html
@@ -59,6 +59,8 @@
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 
     <script>
+      let auth="";
+      fetch("./ok.txt").then(r=>r.text()).then(r=>auth=r.trim());
       document.getElementById("hehe").style =
         "height:" + window.innerHeight / 2.2 + ";";
       let ticker = "NIFTY";
@@ -161,7 +163,7 @@
           headers: {
             "Content-Type": "application/x-www-form-urlencoded;charset=UTF-8",
             authorization:
-              "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJlbWFpbCI6ImFtYW5zaWRodTgxQGdtYWlsLmNvbSIsInN1YiI6IjY0ZWMxNzcxNjYzMzFhMjdiMmJiYWUzNiIsImlzUHJvIjp0cnVlLCJwbGFuRXhwaXJ5IjoxNzE3MjE0Njc2MTU5LCJkZXZpY2UiOiJ3ZWIiLCJpYXQiOjE3MTQ2MjI3MzksImV4cCI6MTcxNTIyNzUzOX0.bwBxVomVI53TxHYSOLP_nrEXhgnCzYDP5T_g_MAtKsc",
+              auth,
           },
         }).then(async (data) => {
           let hehe = await data.json();
